Fixed styling on all sheets so there is no white space at the bottom. Fixed it so that on new account creation it autologs you in

--- a/app/assets/stylesheets/check_lists.scss
+++ b/app/assets/stylesheets/check_lists.scss
@@ -30,7 +30,7 @@
 	background-attachment:fixed;
 	background-size: 100%;
 	padding-top: 20px;
-	padding-bottom: 20px;
+	min-height: 662px;
 	
 }
 
