--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#user_show {
+	background: url(http://zapnews.tk/wp-content/uploads/2015/04/wood-background.jpg) top right;
+	background-attachment:fixed;
+	background-size: 100%;
+	padding-top: 20px;
+	min-height: 662px;
+	text-align: center;
+	text-shadow: 2px 2px 2px white;
+}
